[gd_scene load_steps=2 format=3 uid="uid://cj8qvxk5qh0k1"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="DialoguePanel" type="Panel" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -250.0
offset_right = 500.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Speaker" type="Label" parent="DialoguePanel/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Speaker Name"

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue text goes here."
fit_content = true

[node name="OptionsContainer" type="VBoxContainer" parent="DialoguePanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterSheetPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterSheetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="CharacterSheetPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CharacterSheetPanel/MarginContainer/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "CHARACTER SHEET (Press C to close)"
horizontal_alignment = 1

[node name="StatsText" type="RichTextLabel" parent="CharacterSheetPanel/MarginContainer"]
layout_mode = 2
text = "Stats will appear here"
fit_content = true

[node name="ThoughtCabinetPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ThoughtCabinetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="ThoughtCabinetPanel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="ThoughtCabinetPanel/MarginContainer/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "THOUGHT CABINET (Press T to close)"
horizontal_alignment = 1

[node name="ThoughtsText" type="RichTextLabel" parent="ThoughtCabinetPanel/MarginContainer"]
layout_mode = 2
text = "Thoughts will appear here"
fit_content = true

[node name="InteractPrompt" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Press E to interact"
horizontal_alignment = 1

[node name="SkillCheckNotification" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Label" type="Label" parent="SkillCheckNotification"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"HeaderLarge"
text = "[SKILL] SUCCESS!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBars" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="StatusBars"]
layout_mode = 2
text = "Health:"

[node name="HealthBar" type="ProgressBar" parent="StatusBars"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="MoraleLabel" type="Label" parent="StatusBars"]
layout_mode = 2
text = "Morale:"

[node name="MoraleBar" type="ProgressBar" parent="StatusBars"]
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
